<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@color/BackGround"
    android:fitsSystemWindows="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            >

            <TextView
                android:id="@+id/textview9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lecenddeca_regular"
                android:text="@string/LogInActivity_LogIn"
                android:textAlignment="center"
                android:textColor="#FFFF"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="351dp"
                android:layout_height="304dp"
                android:src="@mipmap/ic_launcher_blue_foreground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/roundedlayout"
        android:layout_gravity="bottom"
        android:layout_weight="5"


        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:fitsSystemWindows="true"
            android:layout_gravity="center"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/LogInActivity_Email"
                    android:fontFamily="@font/lecenddeca_regular"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:textAlignment="viewStart"
                    android:layout_marginLeft="5dp"
                    />


                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/LoginActivity_Email"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:hint="Ex. ahmed@rfs.edu.ps"
                    android:fontFamily="@font/lecenddeca_regular"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edittext_green"
                    android:textAlignment="center"



                    />



            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/LogInActivity_Password"
                    android:fontFamily="@font/lecenddeca_regular"
                    android:textSize="20sp"
                    android:textColor="#000"
                    android:layout_marginLeft="5dp"


                    />


                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/LoginActivity_Password"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="******"
                    android:fontFamily="@font/lecenddeca_regular"
                    android:textColor="#000"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_edittext_green"
                    android:textAlignment="center"
                    />

                <CheckBox
                    android:id="@+id/LoginActivity_rememberme"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LogInActivity_Remeber"
                    android:fontFamily="@font/lecenddeca_regular"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/LoginActivity_createaccount"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/LogInActivity_donthaveaccount"
                android:textColor="#000"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lecenddeca_regular"
                />


            <Button
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:id="@+id/Login"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/roundedbutton_yellow"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/LogInActivity_enter"
                android:fontFamily="@font/lecenddeca_regular"
                android:textAllCaps="false"
                android:textSize="20sp"
                />

        </LinearLayout>

        </ScrollView>

    </LinearLayout>

    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>